@@ -1,3 +1,9 @@
+2008-03-20  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/gui-vtable.c (gui_display_create): add back code that
+	made sure the newly created display/image combo is the user
+	context's active one.
+
 2008-03-20  Martin Nordholts  <martinn@svn.gnome.org>
 
 	* app/display/gimpdisplayshell-close.c
